--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,22 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: air-quality
+  name: skywash
 spec:
-  replicas: 2
+  replicas: 3
   selector:
-    matchLabels: app: air-quality
+    matchLabels: app: skywash
   template:
     metadata:
-      labels:
-        app: air-quality
+      labels: { app: skywash }
     spec:
       containers:
         - name: web
-          image: harbor.cirrus.ucar.edu/<PROJECT>/air-quality:latest
-          ports:
-            - containerPort: 80
+          image: harbor.cirrus.ucar.edu/<PROJECT>/skywash:latest
+          ports: [{ containerPort: 8000 }]
+          env:
+            - name: WASHOUT_COEFF   # example secret made dynamic
+              valueFrom:
+                secretKeyRef:
+                  name: skywash-secrets
+                  key: washout_coeff
           resources:
-            limits:
-              memory: "256Mi"
-              cpu: "500m"
+            limits: { cpu: "500m", memory: "512Mi" }
