--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,11 +1,7 @@
 apiVersion: v1
 kind: Service
-metadata:
-  name: air-quality
+metadata: { name: skywash }
 spec:
-  selector:
-    app: air-quality
-  ports:
-    - port: 80
-      targetPort: 80
+  selector: { app: skywash }
+  ports: [{ port: 80, targetPort: 8000 }]
   type: ClusterIP
